--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
@@ -19,90 +19,89 @@
                     <a href="/UserManagement" class="text-gray-800 hover:text-indigo-600">User Management</a>
                 } *@
             </div>
-            <div class="hidden md:flex items-center space-x-4">
-                @if (HttpContextAccessor.HttpContext.Session.GetString("JWTToken") != null)
+<div class="hidden md:flex items-center space-x-4">
+    @if (HttpContextAccessor.HttpContext.Session.GetString("JWTToken") != null)
+    {
+        <div class="relative group inline-block">
+            <button class="outline-none focus:outline-none px-3 py-1 bg-white rounded-sm flex items-center min-w-32">
+                <span class="pr-1 font-semibold flex-1">Welcome, @HttpContextAccessor.HttpContext.Session.GetString("UserName")!</span>
+                <span>
+                    <svg class="fill-current h-4 w-4 transform group-hover:-rotate-180 transition duration-150 ease-in-out"
+                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                        <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
+                    </svg>
+                </span>
+            </button>
+            <ul class="bg-white border rounded-sm transform scale-0 group-hover:scale-100 absolute transition duration-150 ease-in-out origin-top min-w-32">
+                @{
+                    var userIdString = HttpContextAccessor.HttpContext.Session.GetString("UserId");
+                    var userRole = HttpContextAccessor.HttpContext.Session.GetString("UserRole");
+                }
+                @if (!string.IsNullOrEmpty(userIdString))
                 {
-                    <div class="relative group inline-block">
-                        <button class="outline-none focus:outline-none px-3 py-1 bg-white rounded-sm flex items-center min-w-32">
-                            <span class="pr-1 font-semibold flex-1">Welcome, @HttpContextAccessor.HttpContext.Session.GetString("UserName")!</span>
-                            <span>
-                                <svg class="fill-current h-4 w-4 transform group-hover:-rotate-180 transition duration-150 ease-in-out"
-                                     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                                    <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
-                                </svg>
-                            </span>
-                        </button>
-                        <ul class="bg-white border rounded-sm transform scale-0 group-hover:scale-100 absolute transition duration-150 ease-in-out origin-top min-w-32">
-                            <ul class="bg-white border rounded-sm transform scale-0 group-hover:scale-100 absolute transition duration-150 ease-in-out origin-top min-w-32">
-                                @{
-                                    var userIdString = HttpContextAccessor.HttpContext.Session.GetString("UserId");
-                                    if (!string.IsNullOrEmpty(userIdString))
-                                    {
-                                        <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
-                                            <a href="/EditUser/@userIdString" class="block w-full">Edit Profile</a>
-                                        </li>
-                                        <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
-                                            <a href="/OrderHistory/@userIdString" class="block w-full">Order History</a>
-                                        </li>
-                                    }
-                                    else
-                                    {
-                                        <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
-                                            <span class="block w-full text-gray-500">Profile Unavailable</span>
-                                        </li>
-                                        <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
-                                            <span class="block w-full text-gray-500">Order History Unavailable</span>
-                                        </li>
-                                    }
-                                }
-                     
+                    <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
+                        <a href="/EditUser/@userIdString" class="block w-full">Edit Profile</a>
+                    </li>
 
-
-
-                            @{
-                                var userRole = HttpContextAccessor.HttpContext.Session.GetString("UserRole");
-                                if (userRole == "Admin")
-                                {
-                                    <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
-                                        <a href="/UserManagement" class="block w-full">Admin Dashboard</a>
-                                    </li>
-                                }
-                                else if (userRole == "Seller")
-                                {
-                                    <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
-                                        <a href="/BatchIndex" class="block w-full">Batch Management</a>
-                                    </li>
-                                }
-                                else if (userRole == "DeliveryPersonnel")
-                                {
-                                    <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
-                                        <a href="" class="block w-full">Delivery Dashboard</a>
-                                    </li>
-                                }
-                            }
-                            <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
-                                <form method="post" asp-page="/Login/Logout">
-                                    <button type="submit" class="w-full text-left">Logout</button>
-                                </form>
-                            </li>
-                        </ul>
-                        </ul>
-                    </div>
+                    @if (userRole != "Admin") 
+                    {
+                        <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
+                            <a href="/Order/@userIdString" class="block w-full">Order History</a>
+                        </li>
+                    }
                 }
                 else
                 {
-                    <a href="/Login" class="text-gray-800 hover:text-indigo-600">Login</a>
-                    <a href="/Register" class="bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700">Register</a>
+                    <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
+                        <span class="block w-full text-gray-500">Profile Unavailable</span>
+                    </li>
+                    <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
+                        <span class="block w-full text-gray-500">Order History Unavailable</span>
+                    </li>
                 }
-                <div class="hidden md:flex items-center space-x-4">
-                    <a href="/Cart" class="relative">
-                        <img src="~/icon/shopping-cart.png" alt="Cart" class="h-8 w-8">
-                        <span id="cart-count" class="absolute -top-2 -right-2 bg-red-600 text-white text-xs rounded-full w-6 h-6 flex items-center justify-center">
-                            0
-                        </span>
-                    </a>
-                </div>
-            </div>
+
+                @if (userRole == "Admin")
+                {
+                    <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
+                        <a href="/UserManagement" class="block w-full">Admin Dashboard</a>
+                    </li>
+                }
+                else if (userRole == "Seller")
+                {
+                    <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
+                        <a href="/BatchIndex" class="block w-full">Batch Management</a>
+                    </li>
+                }
+                else if (userRole == "DeliveryPersonnel")
+                {
+                    <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
+                        <a href="" class="block w-full">Delivery Dashboard</a>
+                    </li>
+                }
+                
+                <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
+                    <form method="post" asp-page="/Login/Logout">
+                        <button type="submit" class="w-full text-left">Logout</button>
+                    </form>
+                </li>
+            </ul>
+        </div>
+    }
+    else
+    {
+        <a href="/Login" class="text-gray-800 hover:text-indigo-600">Login</a>
+        <a href="/Register" class="bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700">Register</a>
+    }
+
+    <div class="hidden md:flex items-center space-x-4">
+        <a href="/Cart" class="relative">
+            <img src="~/icon/shopping-cart.png" alt="Cart" class="h-8 w-8">
+            <span id="cart-count" class="absolute -top-2 -right-2 bg-red-600 text-white text-xs rounded-full w-6 h-6 flex items-center justify-center">
+                0
+            </span>
+        </a>
+    </div>
+</div>
             <div class="md:hidden">
                 <!-- Mobile menu button -->
             </div>
