--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/UserPages/UserDelete.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/UserPages/UserDelete.cshtml
@@ -48,7 +48,7 @@
             <input type="hidden" asp-for="User.UserId" />
             <div class="flex justify-between items-center mt-6">
                 <button type="submit" class="bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600">Xóa Người Dùng</button>
-            <a href="/UserManagement" class="text-blue-500 hover:underline">Quay lại danh sách người dùng</a>
+                <a href="/UserManagement" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600">Quay lại </a>
             </div>
         </form>
     </div>
