--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/UserPages/UserDetail.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/UserPages/UserDetail.cshtml
@@ -40,8 +40,7 @@
         </div>
 
         <div class="mt-6 flex justify-between">
-            <a href="/EditUser/@Model.User.UserId" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600">Chỉnh sửa</a>
-            <a href="/UserManagement" class="text-blue-500 hover:underline">Quay lại danh sách người dùng</a>
+            <a href="/UserManagement" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600">Quay lại danh sách người dùng</a>
         </div>
     </div>
 </div>
